my second commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-sample2",
+  "homepage": "https://jaswanth-git-test.github.io/react-test-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
